# src/routes.ts
@@ -7,6 +7,7 @@ import { CreateUserController } from './controllers/user/CreateUserControler';
 import { AuthUserController } from "./controllers/user/AuthUserController";
 import { DetailUserController } from './controllers/user/DetailUserController';
 import { RemoveUserController } from './controllers/user/RemoveUserController';
+import { EditUserController } from './controllers/user/EditUserController';
 
 // Controllers - Category
 import { CreateCategoryController } from './controllers/category/CreateCategoryController';
@@ -44,6 +45,7 @@ router.post('/user', new CreateUserController().handle);
 router.post('/session', new AuthUserController().handle);
 router.get('/me', isAuthenticated, new DetailUserController().handle);
 router.delete('/user/remove', isAuthenticated, new RemoveUserController().handle);
+router.put('/user/edit', isAuthenticated, new EditUserController().handle);
 
 // ==================== CATEGORY ROUTES ==================== 
 router.post("/category", isAuthenticated, new CreateCategoryController().handle);
